# LLMStorageServicePublic

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
email/: pyproject.toml
email/src/: main.py
email/src/modules/: scheduler.py  summarizer.py  types.py
email/src/modules/mailbox/: imap.py  outlook.py
email/src/utils/: jsondb.py  storage.py
storage/: pyproject.toml
storage/src/: main.py
storage/src/modules/: ocr.py  storage.py
storage/src/modules/interfaces/: amazons3.py  gdrive.py  local.py
storage/src/utils/: oauth2.py
