[project]
name = "emailassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "aiofiles>=24.1.0",
    "imbox>=0.9.8",
    "langchain-openai>=0.3.33",
    "o365>=2.1.7",
    "pydantic>=2.11.7",
    "streamlit>=1.49.1",
]
